--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@salecycle/koa2-joi-validator",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "koa2 joi validation middleware",
-  "main": "index.js",
+  "main": ".dist/validator.js",
   "repository": "https://github.com/SaleCycle/koa2-joi-validator.git",
   "author": "Salecycle assets team <assetsteam@salecycle.com>",
   "license": "MIT",
